# readdir-precache

./: .clang-format  README.md  encfs_mapper.c  encfs_mapper.h  intercepted_functions.c  intercepted_functions.h  libprecache.c  log.h  mem.h  meson.build  precache.c  precache_dir.c  progress.c  progress.h  segments.c  segments.h  ut_misc.h  utils.c  utils.h
